--- a/sending_html_page_to_app/public/index.html
+++ b/sending_html_page_to_app/public/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Page</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            background-color: aqua;
+            color: blue;
+        }
+    </style>
 </head>
+
 <body>
     <p>This is our Home Page</p>
 </body>
+
 </html>
