--- a/calculator_using_body_parser/public/index.html
+++ b/calculator_using_body_parser/public/index.html
@@ -9,11 +9,7 @@
 </head>
 
 <body>
-    <form action="/" method="post">
-        <input type="text" name="num1" id="" placeholder="number 1">
-        <input type="text" name="num2" id="" placeholder="number 2">
-        <input type="submit" value="submit">
-    </form>
+    <p>This is Home Page</p>
 </body>
 
 </html>
