--- a/weather_app/public/index.html
+++ b/weather_app/public/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <form action="/" method="post">
-        <label for="longitude">
+        <label for="latitude">
             Longitude:
         </label>
-        <input id="longitude" type="text" name="longitude">
+        <input id="latitude" type="text" name="latitude">
         <br>
-        <label for="latitude">
+        <label for="longitude">
             Latitude:
         </label>
-        <input id="latitude" type="text" name="latitude" style="margin-top: 1rem;">
+        <input id="longitude" type="text" name="longitude" style="margin-top: 1rem;">
         <br>
         <input type="submit" value="submit" style="margin-left: 6rem; margin-top: 1rem;">
     </form>
