--- a/subscription_form_using_mailchimp_api/public/index.html
+++ b/subscription_form_using_mailchimp_api/public/index.html
@@ -12,14 +12,14 @@
 
 <body class="flex justify-center items-center w-full h-full mt-20">
     <div class="w-full max-w-xs">
-        <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+        <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4" method="post" action="/">
             <div class="mb-4">
                 <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
                     First Name
                 </label>
                 <input
                     class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                    id="firstname" type="text" placeholder="first name">
+                    name="firstname" type="text" placeholder="first name">
             </div>
             <div class="mb-4">
                 <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
@@ -27,7 +27,7 @@
                 </label>
                 <input
                     class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                    id="lastname" type="text" placeholder="last name">
+                    name="lastname" type="text" placeholder="last name">
             </div>
             <div class="mb-4">
                 <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
@@ -35,14 +35,15 @@
                 </label>
                 <input
                     class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                    id="email" type="email" placeholder="email">
+                    name="email" type="email" placeholder="email">
             </div>
             <div class="flex items-center justify-between">
-                <button
+                <!-- <button
                     class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline mx-auto"
                     type="button">
                     Subsribe
-                </button>
+                </button> -->
+                <input type="submit" value="subscribe" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline mx-auto cursor-pointer">
             </div>
         </form>
         <p class="text-center text-gray-500 text-xs">
